syntax = "proto3";

package org.datacommons.proto;

// Includes protos that are used in spanner storage.
// The protos are typically gzipped and stored in a bytes column.

// Observations represent the observations (time series) stored in the observations column in the Observation table.
message Observations {
  // Map from date to value.
  // Examples: "2024" -> "123", "2025-05" -> "-456.78"
  map<string, string> values = 1;
}


message GeoJsonCoordinates{

  message Point{
    optional double latitude = 1;
    optional double longitude = 2;
    optional double altitude = 3;
  }

  message Polygon{
    repeated Point points = 1;
  }

  repeated Polygon polygons = 1;


}

//message KmlCoordinates{
//  message Coordinates{
//    repeated double points = 1;
//  }
//
//  repeated Coordinates coordinates = 1;
//}
